Fixing image generation